--- a/metadata.yaml
+++ b/metadata.yaml
@@ -26,5 +26,6 @@ subjects:
 - !lcsh 'Strikes and lockouts -- Fiction'
 - !lcc 'PS'
 - !lcsh 'Pullman Strike, 1894 -- Fiction'
+- GITenberg
 title: A Tame Surrender, A Story of The Chicago Strike
 url: http://www.gutenberg.org/ebooks/23927
